--- a/peakcenter/Peak Centre Project/PeakCentreProject/.settings/org.eclipse.wst.common.component
+++ b/peakcenter/Peak Centre Project/PeakCentreProject/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="PeakCentreProject">
+    <wb-module deploy-name="PeakCentreProject_11">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="PeakCentreProject"/>
-        <property name="java-output-path" value="/PeakCentreProject/build/classes"/>
+        <property name="java-output-path" value="/PeakCentreProject_11/build/classes"/>
+        <property name="context-root" value="PeakCentreProject_11"/>
     </wb-module>
 </project-modules>
